hphp/test/slow/parser/unset_class_constant.php.expectf
Fatal error: You cannot use this syntax in an `unset()` expression. in %s/unset_class_constant.php on line 10